# factura-tools

./: .gitignore  README.md  pyproject.toml
src/: extractZip.py  main.py  moveFilesRenamed.py  processFiles.py  renamePictures.py
src/ui/: app_window.py
